--- a/scss/main.scss
+++ b/scss/main.scss
@@ -71,9 +71,7 @@ header {
     }
   }
 }
-.bg-semitransparent {
-  background-color: rgba(60, 60, 60, 0.6);
-}
+
 footer {
   background: #1d2705;
   display: flex;
@@ -81,5 +79,34 @@ footer {
   justify-content: center;
   p {
     margin: 20px;
+  }
+}
+//Animation
+#animation {
+  display: block;
+  height: 30px;
+  overflow: hidden;
+}
+.animation-wrap {
+  position: relative;
+}
+
+.animation-object {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #1d2705;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+
+  animation: anim 5s ease 5s infinite alternate;
+}
+@keyframes anim {
+  from {
+    left: -25;
+  }
+  to {
+    left: 1500px;
   }
 }
